fixed don header now aligned desktop/mobile

--- a/css/header.css
+++ b/css/header.css
@@ -25,6 +25,10 @@
     font-weight: 900;
 }
 
+#col-don-Header {
+    padding-right: 2.7vw;
+}
+
 #logo-lilot-header {
     padding: 20px;
     width: 100%;
@@ -96,8 +100,8 @@
     }
 
     #logo-lilot-header {
-        padding: 20px;
         width: 80%;
+        min-width: 150px!important;
         height: 100%;
     }
 
@@ -156,9 +160,14 @@
 }
 
 @media (max-width: 540px) {
+    #col-don-Header {
+        padding-top: 20px;
+        padding-right: 30px;
+    }
+
     #logo-lilot-header {
-        padding: 20px;
         width: 80%;
+        min-width: 150px!important;
         height: 100%;
     }
 
@@ -180,7 +189,7 @@
     #div-don-header {
         text-align: center;
         height: 10vw;
-        width: 70%;
+        width: 100%;
         display: table;
         margin: 12% -5px 5px;
     }
@@ -190,7 +199,7 @@
     #div-don-header {
         text-align: center;
         height: 10vw;
-        width: 70%;
+        width: 100%;
         display: table;
         margin: 10% -5px 5px;
     }
